<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BBMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="play_prev">上一首</string>
    <string name="play_next">下一首</string>
    <string name="default_play_time">00:00</string>
    <string name="song_title">歌名</string>
    <string name="artist">歌手</string>
    <string name="lyric">歌词</string>
</resources>
